--- a/app/globals.css
+++ b/app/globals.css
@@ -16,12 +16,25 @@
   }
 }
 
+*,
+*:before,
+*:after {
+  box-sizing: border-box;
+}
+
+html,
 body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+  height: 100%;
+  overflow: hidden;
+}
+
+body {
+  margin: 0;
+}
+
+main {
+  max-width: 100%;
+}
+.canvas-container {
+  position: relative;
 }
