--- a/app/globals.css
+++ b/app/globals.css
@@ -22,19 +22,6 @@
   box-sizing: border-box;
 }
 
-html,
 body {
-  height: 100%;
-  overflow: hidden;
-}
-
-body {
-  margin: 0;
-}
-
-main {
-  max-width: 100%;
-}
-.canvas-container {
-  position: relative;
+  background-color: #fffbdb;
 }
