--- a/app/globals.css
+++ b/app/globals.css
@@ -21,3 +21,28 @@
 *:after {
   box-sizing: border-box;
 }
+.input {
+  border: none;
+  border: 1px solid black;
+  border-radius: 5px;
+  padding: 1rem 2rem;
+}
+.click {
+  padding: 0.5rem 1rem;
+  color: white;
+  border: 2px solid white;
+  background-color: #0e0e52;
+  border-top-left-radius: 10px;
+  border-bottom-right-radius: 10px;
+}
+.click:hover {
+  background-color: #ff5714;
+}
+.check {
+  font-size: 2rem;
+  margin: 5px;
+}
+input.check {
+  width: 20px;
+  height: 20px;
+}
